--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     <div id="root"></div>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
-    // Set Razorpay Key ID here or use environment variable
-    // Replace 'YOUR_RAZORPAY_KEY_ID' with your actual Razorpay Key ID
+    // Set Razorpay Key ID here
+    // Replace 'YOUR_RAZORPAY_KEY_ID' with your actual Razorpay Key ID from dashboard
+    // Get it from: https://dashboard.razorpay.com → Settings → API Keys
     window.RAZORPAY_KEY_ID = 'YOUR_RAZORPAY_KEY_ID';
   </script>
   <script type="module" src="/index.tsx"></script>
