Add complete backend API for Razorpay payments with order creation and verification

--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
     <div id="root"></div>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
-    // Set Razorpay Key ID here
-    // Replace 'YOUR_RAZORPAY_KEY_ID' with your actual Razorpay Key ID from dashboard
-    // Get it from: https://dashboard.razorpay.com → Settings → API Keys
-    window.RAZORPAY_KEY_ID = 'YOUR_RAZORPAY_KEY_ID';
+    // Razorpay Key ID - Test Key
+    // For production, replace with your live key from Razorpay Dashboard
+    window.RAZORPAY_KEY_ID = 'rzp_test_Rv4c4iUwni06DQ';
   </script>
   <script type="module" src="/index.tsx"></script>
 </body>
